# -quickee

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  README.md  pyproject.toml  streamlit_app.py
scripts/: ask.py  build_catalog.py  ingest.py  scrape.py  smoke_gemini.py
src/quickee/: __init__.py  config.py  models.py
src/quickee/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/quickee/api/: __init__.py  main.py
src/quickee/cache/: __init__.py  semantic_cache.py
src/quickee/rag/: __init__.py  build.py  embeddings.py  ingest.py  retriever.py
src/quickee/scraper/: __init__.py  base.py  bewakoof.py  normalize.py  uniqlo.py
